<resources>
    <string name="app_name">Smart meal</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">sign up</string>
    <string name="username">Username</string>
    <string name="your_name">your name</string>
    <string name="password">Password</string>
    <string name="avatar">avatar</string>
    <string name="sign_upp">SIGN UP</string>

    <string-array name="account_type">
        <item>Nhân viên</item>
        <item>Quản lý</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="danh_sach_ban">Danh sách bàn</string>
    <string name="ban_trong">Bàn trống</string>
    <string name="co_khach">Có Khách</string>
    <string name="dat_truoc">Đặt trước</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="OrderTable">Đặt trước</string>
    <string name="fillTable">Có khách</string>
    <string name="payAction">Thanh Toán</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="phone">Số điện thoại</string>
    <string name="customer_count">Số người</string>
    <string name="default_number">0</string>
    <string name="time">Thời gian</string>
    <string name="time_order_from">Từ</string>
    <string name="timer_order_to">đến</string>
    <string name="default_hour">7</string>
    <string name="date">Ngày</string>
    <string name="order_table">Đặt bàn</string>
    <string name="cancel">Huỷ bỏ</string>
    <string name="login">Đăng nhập</string>
    <string name="logon">Đăng ký</string>
    <string name="order_product">Gọi món</string>
    <string name="order_product_infor">Thông tin gọi món</string>
    <string name="order_table_infor">Thông tin đặt bàn</string>
    <string name="confirm">Xác nhận</string>
    <string name="danh_sach_mon">Danh sách món</string>
    <string name="save">Lưu</string>
    <string name="image_product">Ảnh sản phẩm</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="active">Kích hoạt</string>
    <string name="price">Giá</string>
    <string name="add_product">Thêm sản phẩm</string>
    <string name="logout">Đăng xuất</string>
    <string name="add_table">Thêm bàn</string>
    <string name="logout_notify">Bạn đã đăng xuất!</string>
    <string name="close">Đóng</string>
    <string name="decrease">-</string>
    <string name="cash">Giỏ hàng</string>
    <string name="choosed_list">Danh sách đã chọn</string>
    <string name="cf_order_product">Đặt món</string>
    <string name="total_amount">Tổng cộng</string>
    <string name="count">Số lượng</string>
    <string name="amount_money">Thành tiền</string>
    <string name="payment">Thanh  toán</string>
    <string name="empty_list">Danh sách trống</string>
    <string name="account">Tài khoản</string>
</resources>