<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <item
        android:id="@+id/orderProduct"
        android:title="@string/order_product" />
    <item
        android:id="@+id/orderProductInfor"
        android:title="@string/order_product_infor" />
    <item
        android:id="@+id/orderTableInfor"
        android:title="@string/order_table_infor" />
    <item
        android:id="@+id/fillTable"
        android:title="@string/fillTable"
        app:showAsAction="never"/>
    <item
        android:id="@+id/orderTable"
        android:title="@string/OrderTable"
        app:showAsAction="never"/>
    <item
        android:id="@+id/payment"
        android:title="@string/payAction"
        app:showAsAction="never"/>
</menu>