<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp">


    <Button
        android:id="@+id/btn_productok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_productcancel" />

    <Button
        android:id="@+id/btn_productcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorConfirm"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_productok"
        app:layout_constraintEnd_toStartOf="@+id/btn_productok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_productok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/image_product"
                app:srcCompat="@drawable/camera2" />

            <TextView
                android:id="@+id/lbl_productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/product_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/product_name"
                android:inputType="text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lbl_productprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/price"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_productprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/price"
                android:inputType="numberSigned"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/chk_productactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/active" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>