<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="6dp"
    app:flow_horizontalAlign="center">


    <TextView
        android:id="@+id/lbl_cf2tablename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_cf2customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_name" />

        <EditText
            android:id="@+id/txt_cf2customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/lbl_cf2phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/txt_cf2phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cf2ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:clickable="true"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorConfirm" />

        <Button
            android:id="@+id/btn_cf2cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorCancel" />
    </LinearLayout>

</LinearLayout>