<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="android.example.smartmeal.order.OrderTableViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ordertable_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{viewModel.tableName}"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/customer_name"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ordertable_name" />

            <EditText
                android:id="@+id/txt_customer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/customer_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_customer"
                android:text="@{viewModel.order.customerName}"
                android:enabled="@{!viewModel.isOnLoad}"/>

            <TextView
                android:id="@+id/lbl_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/phone"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/txt_customer"
                app:layout_constraintTop_toBottomOf="@+id/txt_customer" />

            <EditText
                android:id="@+id/txt_Phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_Phone"
                android:text="@{viewModel.order.customerContact}" />

            <TextView
                android:id="@+id/lbl_customercount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/customer_count"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_Phone" />

            <EditText
                android:id="@+id/txt_customercount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/customer_count"
                android:inputType="numberSigned"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_customercount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lbl_customercount"
                app:layout_constraintTop_toTopOf="@+id/lbl_customercount"
                tools:text="@string/default_number" />

            <TextView
                android:id="@+id/lbl_ordertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/time"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_customercount" />

            <EditText
                android:id="@+id/txt_timeorder"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/time_order_from"
                android:inputType="numberSigned"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_ordertime"
                app:layout_constraintStart_toEndOf="@+id/lbl_ordertime"
                app:layout_constraintTop_toTopOf="@+id/lbl_ordertime" />

            <EditText
                android:id="@+id/txt_orderdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/date"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_ordertime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_timeorder"
                app:layout_constraintTop_toTopOf="@+id/lbl_ordertime" />

            <Button
                android:id="@+id/btn_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/order_table"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancelorder"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_orderdate"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_cancelorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_order" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>